fix slider arrow z-index

--- a/build-front/sass/pages/main/_about-us.scss
+++ b/build-front/sass/pages/main/_about-us.scss
@@ -40,17 +40,16 @@
         cursor: pointer;
         top: 50%;
         margin-top: -25px;
+        z-index: 2;
 
         &.left {
           position: absolute;
           left: 15px;
-          z-index: 100;
         }
 
         &.right {
           position: absolute;
           right: 15px;
-          z-index: 100;
         }
       }
     }
